updating product service url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-server.port=9099
+#server.port=9099
+microservice.product.service.url=http\://product-service-hystrix-my-dev.1d35.starter-us-east1.openshiftapps.com/
+#microservice.product.service.url=http://localhost:8098/
+
+
+
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
+hystrix.shareSecurityContext=true
+hystrix.command.default.execution.isolation.strategy=SEMAPHORE
