updating properties for hystrix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ microservice.product.service.url=http\://product-service-hystrix-my-dev.1d35.sta
 
 
 
-
+management.endpoints.web.exposure.include=*
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=60000
 hystrix.shareSecurityContext=true
 hystrix.command.default.execution.isolation.strategy=SEMAPHORE
